--- a/_nb_header_minimal.html
+++ b/_nb_header_minimal.html
@@ -1,6 +1,12 @@
-
-
-
+<!-- twitter card, should look for a better place to put it on the pleican side -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@kylecranmer" />
+<meta name="twitter:title" content="TheoryAndPractice.org" />
+<meta name="twitter:creator" content="@kylecranmer" />
+<meta name="twitter:creator:id" content="1556664198" />
+<meta name="twitter:description" content="TheoryAndPractice.org is Kyle Cranmer's blog" />
+<meta name="twitter:image" content="https://pbs.twimg.com/profile_images/378800000065241474/e47527eed661a899d666329eb2774477_400x400.jpeg" />
+<meta name="twitter:url" content="http://TheoryAndPractice.org" />
 <style type="text/css">
 
 /*some stuff for output/input prompts*/
