--- a/extra_header_minimal.html
+++ b/extra_header_minimal.html
@@ -31,3 +31,12 @@ init_mathjax = function() {
 init_mathjax();
 </script>
 -->
+
+
+ <script type="text/javascript" src="https://cdn.rawgit.com/oreillymedia/thebe/17fe0971303cac24d7e806c8f1bc8ba3c0c40b23/static/main-built.js"></script>
+  <script>
+    $(function(){
+      new Thebe({url:"https://tmpnb.org/",
+                 kernel_name: "python3"});
+    });
+  </script>
